# app/routes/routes.go
@@ -3,6 +3,8 @@ package routes
 import (
 	"golang-mvc/app/controllers"
 	"golang-mvc/app/middlewares"
+	"net/http"
+
 	// "golang-mvc/app/middlewares"
 	_ "golang-mvc/docs"
 
@@ -14,6 +16,21 @@ import (
 func InitRoute() *gin.Engine {
 	r := gin.Default()
 
+	r.Use(func(c *gin.Context) {
+		// Thêm header CORS cho mỗi request
+		c.Writer.Header().Set("Access-Control-Allow-Origin", "*") // Cho phép tất cả các origin
+		c.Writer.Header().Set("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, PATCH, OPTIONS") // Các phương thức HTTP cho phép
+		c.Writer.Header().Set("Access-Control-Allow-Headers", "Content-Type, Authorization") // Các header cho phép
+
+		// Xử lý preflight OPTIONS
+		if c.Request.Method == http.MethodOptions {
+			c.AbortWithStatus(http.StatusOK)
+			return
+		}
+		
+		c.Next()
+	})
+
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	//version 1.0
@@ -22,6 +39,7 @@ func InitRoute() *gin.Engine {
 		//auth
 		v1.POST("/login", controllers.UserLoginController)
 		v1.POST("/register", controllers.UserRegisterController)
+		v1.GET("/auth/checkToken", controllers.CheckValidJWT)
 
 		//todo
 		v1.POST("/", middlewares.AuthGuard, controllers.GetFilterTodosController)
